--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -92,6 +92,9 @@ input, select, textarea {
 	body {
 		background: #1b1f22;
 	}
+	body.is-preload {
+		position: relative;
+	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
 			-moz-animation: none !important;
@@ -102,6 +105,26 @@ input, select, textarea {
 			-webkit-transition: none !important;
 			-ms-transition: none !important;
 			transition: none !important;
+
+
+		}
+		body.is-preload .preload-precesing {
+			display: flex !important;
+			z-index: 20;
+			justify-content: center;
+			align-items: center;
+			width:  100px;
+			height:  100px;
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			padding:  5px;
+			margin: auto;
+		}
+		body.is-ready .preload-precesing {
+			display: none !important;
 		}
 
 /* Type */
@@ -1147,10 +1170,10 @@ input, select, textarea {
 		}
 
 		#bg:before {
-			-moz-transition: background-color 2.5s ease-in-out;
-			-webkit-transition: background-color 2.5s ease-in-out;
-			-ms-transition: background-color 2.5s ease-in-out;
-			transition: background-color 2.5s ease-in-out;
+			-moz-transition: background-color 1s ease-in-out;
+			-webkit-transition: background-color 1s ease-in-out;
+			-ms-transition: background-color 1s ease-in-out;
+			transition: background-color 1s ease-in-out;
 			-moz-transition-delay: 0.75s;
 			-webkit-transition-delay: 0.75s;
 			-ms-transition-delay: 0.75s;
@@ -1170,10 +1193,10 @@ input, select, textarea {
 			-webkit-transform: scale(1.125);
 			-ms-transform: scale(1.125);
 			transform: scale(1.125);
-			-moz-transition: -moz-transform 0.325s ease-in-out, -moz-filter 0.325s ease-in-out;
-			-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
-			-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
-			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
+			-moz-transition: -moz-transform 0.15s ease-in-out, -moz-filter 0.15s ease-in-out;
+			-webkit-transition: -webkit-transform 0.15s ease-in-out, -webkit-filter 0.15s ease-in-out;
+			-ms-transition: -ms-transform 0.15s ease-in-out, -ms-filter 0.15s ease-in-out;
+			transition: transform 0.15s ease-in-out, filter 0.15s ease-in-out;
 			background-image: url("../../images/bg-blue.jpg");
 			background-position: center;
 			background-size: cover;
@@ -1193,7 +1216,7 @@ input, select, textarea {
 		}
 
 		body.is-preload #bg:before {
-			background-color: #000000;
+			background-color: rgba(0,0,0,0.9);
 		}
 
 /* Wrapper */
